<resources>
    <string name="app_name">Travel App</string>

    <!-- Strings of Toolbars -->
    <string name="titleCities">I Tuoi Viaggi</string>
    <string name="titleEvents">I Tuoi Eventi</string>
    <string name="DayList">Lista dei Giorni</string>
    <string name="ToolbarListDays">Ecco il tuo fantastico programma</string>

    <!-- Strings of City Activity -->
    <string name="AddNewCity">Aggiungi un nuovo viaggio</string>
    <string name="autocomplete_hint">Inserisci una località</string>
    <string name="destination">Dove vorresti andare?</string>
    <string name="TitleTripEmpty">Scegli la tua destinazione</string>

    <string name="AddedaNewTrip">È stato aggiunto un nuovo viaggio</string>

    <!-- Strings of Event Activity-->
    <string name="NewEvent">Nuovo Evento</string>
    <string name="TitleEvent">Dove vuoi andare?</string>
    <string name="TitleEventEmpty">Inserisci il Titolo Evento</string>
    <string name="titleEvent">Scegli dove andare</string>
    <string name="notesOnEvent">Eventuali note</string>
    <string name="beginEvent">Ora di inizio</string>
    <string name="notifyEvent">Notificami</string>
    <string name="noNotes">(nessuna nota)</string>
    <string name="TimeofEvent">A Che Ora?</string>

    <string name="textEmail">e-mail</string>
    <string name="textPassword">Password</string>

    <!--Strings of Alert Dialog -->
    <string name="TypeRestaurant">Ristorante</string>
    <string name="TypeFlight">Volo</string>
    <string name="TypeHotel">Hotel</string>
    <string name="TypeMuseum">Museo</string>

    <!--Strings of Various Menu -->

    <string name="ItemDone">Done</string>
    <string name="ItemLogout">Logout</string>
    <string name="ItemInfo">Info App</string>

    <string name="campoObbligatorio">Questo campo è obbligatorio</string>
    <string name="firstLaunchString">Benvenuto in TravelApp!</string>
    <string name="rememberToRegisterString">Ricorda di registrarti!</string>
    <string name="passwordMismatch">Le password non corrispondono!</string>
    <string name="erroreLunghezzaPass">La password deve essere di almeno 6 caratteri!</string>

</resources>
